# rust.system-tray

./: Cargo.toml  README.md  build.rs
lib/: CMakeLists.txt  TASK.md  TODO.md
lib/src/: lib.cpp  lib.hpp
src/: error.rs  lib.rs  main.rs
